--- a/app/globals.css
+++ b/app/globals.css
@@ -20,8 +20,43 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.mainApp {
+  display: flex;
+  flex-direction: column;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+/* Custom styles */
+.header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(169, 185, 187); /* Semi-transparent background */
+  padding: 0.5rem 1rem;
+  z-index: 10;
+}
+
+.header h1 {
+  font-size: 1.5rem;
+  color: var(--foreground);
+  font-weight: bold;
+}
+
+.auth-buttons button {
+  background-color: #323945; /* blue-500 */
+  color: rgb(209, 227, 228);
+  font-weight: bold;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  transition: background-color 0.2s;
+}
+
+.auth-buttons button:hover {
+  background-color: #2c8f6c; /* blue-700 */
 }
