--- a/app/globals.css
+++ b/app/globals.css
@@ -18,11 +18,8 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-}
-
-.mainApp {
-  display: flex;
-  flex-direction: column;
+  margin: 0;
+  overflow: hidden;
 }
 
 @layer utilities {
@@ -37,7 +34,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(169, 185, 187); /* Semi-transparent background */
+  background-color: rgb(209, 219, 220);
   padding: 0.5rem 1rem;
   z-index: 10;
 }
@@ -49,8 +46,8 @@ body {
 }
 
 .auth-buttons button {
-  background-color: #323945; /* blue-500 */
-  color: rgb(209, 227, 228);
+  background-color: #3b82f6; /* blue-500 */
+  color: white;
   font-weight: bold;
   padding: 0.5rem 1rem;
   border-radius: 0.25rem;
@@ -58,5 +55,11 @@ body {
 }
 
 .auth-buttons button:hover {
-  background-color: #2c8f6c; /* blue-700 */
+  background-color: #1d4ed8; /* blue-700 */
+}
+
+.map-container {
+  flex-grow: 1;
+  width: 100%;
+  height: calc(100vh - 4rem); /* Adjusting height to account for header */
 }
